--- a/website/app1/templates/app1/index.html
+++ b/website/app1/templates/app1/index.html
@@ -2,7 +2,9 @@
 {% if all_albums %}
     <ul>
         {% for album in all_albums %}
-        <li><a href="/app1/{{ album.id }}/">{{ album.album_title }}</a></li>
+            <!--<li><a href="/app1/{{ album.id }}/">{{ album.album_title }}</a></li>-->
+            <li><a href="{% url 'detail' album.id %}">{{ album.album_title }}</a></li>
+            <!--url 'detail' gets the url pattern named detail-->
         {% endfor %}
     </ul>
 {% else %}
