--- a/website/app1/templates/app1/detail.html
+++ b/website/app1/templates/app1/detail.html
@@ -3,8 +3,28 @@
 <h1>{{ album.album_title }}</h1>
 <h3>{{ album.artist }}</h3>
 
-<ul>
+<!--<ul>-->
+<!--    {% for song in album.song_set.all %}-->
+<!--        <li>{{ song.song_title }} - {{ song.file_type }}</li>-->
+<!--    {% endfor %}-->
+<!--</ul>-->
+
+{% if error_message %}
+    <p><strong>{{ error_message }}</strong></p>
+{% endif %}
+
+<!--action = the URL pattern to send data to-->
+<form action="{% url 'app1:favourite' album.id %}" method="post">
+    {% csrf_token %}
     {% for song in album.song_set.all %}
-        <li>{{ song.song_title }} - {{ song.file_type }}</li>
+        <input type='radio' id='song{{ forloop.counter }}' name='song' value='{{ song.id }}' />
+        <label for='song{{ forloop.counter }}'>
+            {{ song.song_title }}
+            {% if song.is_favourite %}
+                <img src='http://findicons.com/files/icons/1620/crystal_project/22/knewstuff.png' />
+            {% endif %}
+        </label>
+        <br>
     {% endfor %}
-</ul>
+    <input type='submit' value='Favourite'>
+</form>
