--- a/website/app1/templates/app1/index.html
+++ b/website/app1/templates/app1/index.html
@@ -1,3 +1,8 @@
+<!--load path to static files-->
+{% load staticfiles %}
+<!--load specific style sheet-->
+<link rel='stylesheet' type='text/css' href="{% static 'app1/style.css' %}" />
+
 <h1>This is the app1 app homepage!</h1>
 {% if all_albums %}
     <ul>
