--- a/website/app1/templates/app1/index.html
+++ b/website/app1/templates/app1/index.html
@@ -1,80 +1,19 @@
-<!--first include and use bootstrap css styling-->
-<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<!--include other external files:-->
-<link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/css?family=Satisfy" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{% extends 'app1/base.html' %}
 
-<!--load path to static files-->
-{% load staticfiles %}
-<!--load specific style sheet to override bootstrap styling (note order)-->
-<link rel='stylesheet' type='text/css' href="{% static 'app1/style.css' %}" />
+<!-- the following goes into the base.html "custom area" block named "body": -->
+{% block body %}
 
+    <h1>This is the app1 app homepage!</h1>
+    {% if all_albums %}
+        <ul>
+            {% for album in all_albums %}
+                <!--<li><a href="/app1/{{ album.id }}/">{{ album.album_title }}</a></li>-->
+                <li><a href="{% url 'app1:detail' album.id %}">{{ album.album_title }}</a></li>
+                <!--url 'detail' gets the url pattern named detail-->
+            {% endfor %}
+        </ul>
+    {% else %}
+        <h3>You don't have any albums.</h3>
+    {% endif %}
 
-<nav class='navbar navbar-inverse'>
-    <div class='container-fluid'>
-        
-        <!-- header -->
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#topNavBar'> <!--links to the 'topNavBar' div-->
-                <!--3 lines for option icon-->
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-            </button>
-            <a class='navbar-brand' href="{% url 'app1:index' %}">MyBrandName</a>
-        </div>
-        
-        <!-- items: "collapsible/hide-able" when broswer is too small to fit -->
-        <div class='collapse navbar-collapse' id='topNavBar'> <!--targetted as the 'topNavBar' div by data-target='#topNavBar'-->
-            
-            <ul class='nav navbar-nav'>
-                <li class='active'>
-                    <a href="{% url 'app1:index' %}">
-                        <span class='glyphicon glyphicon-cd' aria-hidden='true'></span>&nbsp; Albums
-                    </a>
-                </li>
-                <li class=''>
-                    <a href="#">
-                        <span class='glyphicon glyphicon-music' aria-hidden='true'></span>&nbsp; Songs
-                    </a>
-                </li>
-            </ul>
-            
-            <form class='navbar-form navbar-left' role='search' method='get' action='#'>
-                <div class='form-group'>
-                    <input type='text' class='form-control' name='queryVar' value=''>
-                </div>
-                <button type='submit' class='btn btn-default'>Search</button>
-            </form>
-            
-            <ul class='nav navbar-nav navbar-right'>
-                <li class=''>
-                    <a href="#">
-                        <span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp; Add Album
-                    </a>
-                </li>
-                <li class=''>
-                    <a href="#">
-                        <span class='glyphicon glyphicon-off' aria-hidden='true'></span>&nbsp; Logout
-                    </a>
-                </li>
-            </ul>
-            
-        </div>
-        
-    </div>
-</nav>
-
-<h1>This is the app1 app homepage!</h1>
-{% if all_albums %}
-    <ul>
-        {% for album in all_albums %}
-            <!--<li><a href="/app1/{{ album.id }}/">{{ album.album_title }}</a></li>-->
-            <li><a href="{% url 'app1:detail' album.id %}">{{ album.album_title }}</a></li>
-            <!--url 'detail' gets the url pattern named detail-->
-        {% endfor %}
-    </ul>
-{% else %}
-    <h3>You don't have any albums.</h3>
-{% endif %}
+{% endblock %}
