--- a/website/app1/templates/app1/detail.html
+++ b/website/app1/templates/app1/detail.html
@@ -6,23 +6,28 @@
 <!-- the following goes into the base.html "custom area" block named "body": -->
 {% block body %}
 
-    <img src="{{ album.album_logo }}">
+    <img src="{{ album.album_logo }}" style="width: 250px">
 
     <h1>{{ album.album_title }}</h1>
-    <h3>{{ album.artist }}</h3>
-
-    <!--<ul>-->
-    <!--    {% for song in album.song_set.all %}-->
-    <!--        <li>{{ song.song_title }} - {{ song.file_type }}</li>-->
-    <!--    {% endfor %}-->
-    <!--</ul>-->
+    <h2>{{ album.artist }}</h2>
 
     {% if error_message %}
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
 
+    {% for song in album.song_set.all %}
+        {{ song.song_title }}
+        {% if song.is_favourite %}
+            <img src='http://findicons.com/files/icons/1620/crystal_project/22/knewstuff.png' />
+        {% endif %}
+        <br>
+    {% endfor %}
+
+{% endblock %}
+
+    <!-- this used to be in the block: -->
     <!--action = the URL pattern to send data to-->
-    <form action="{% url 'app1:favourite' album.id %}" method="post">
+    <!-- <form action="{% url 'app1:favourite' album.id %}" method="post">
         {% csrf_token %}
         {% for song in album.song_set.all %}
             <input type='radio' id='song{{ forloop.counter }}' name='song' value='{{ song.id }}' />
@@ -35,6 +40,4 @@
             <br>
         {% endfor %}
         <input type='submit' value='Favourite'>
-    </form>
-
-{% endblock %}
+    </form> -->
