--- a/website/app1/templates/app1/base.html
+++ b/website/app1/templates/app1/base.html
@@ -57,7 +57,7 @@
 
               <ul class='nav navbar-nav navbar-right'>
                   <li class=''>
-                      <a href="#">
+                      <a href="{% url 'app1:album-add' %}">
                           <span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp; Add Album
                       </a>
                   </li>
